[gd_scene load_steps=7 format=2]

[ext_resource path="res://resource/ui/windows/background2.png" type="Texture" id=1]
[ext_resource path="res://WinWindow.gd" type="Script" id=2]
[ext_resource path="res://resource/ui/yazata.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://src/objects/IgnisRegularInner/IgnisRegularInner.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 3 )

[node name="WinWindow" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Sprite" type="Sprite" parent="MarginContainer/CenterContainer"]
position = Vector2( 640, 360 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Sprite" type="Sprite" parent="MarginContainer/CenterContainer/CenterContainer"]

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/CenterContainer/Sprite"]
margin_left = -166.0
margin_top = -140.0
margin_right = 166.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.886275, 0.964706, 0.560784, 1 )
text = "level
complete"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Button" parent="MarginContainer/CenterContainer/CenterContainer/Sprite"]
margin_left = -31.5
margin_top = 60.0
margin_right = 31.5
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.898039, 1, 0.639216, 1 )
text = "ok"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkLight" parent="MarginContainer/CenterContainer/CenterContainer/Sprite/Ok" instance=ExtResource( 4 )]
visible = false
position = Vector2( -30, 30 )
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/CenterContainer/Sprite/Ok" to="." method="_on_Ok_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CenterContainer/CenterContainer/Sprite/Ok" to="." method="_on_Ok_mouse_exited"]
[connection signal="pressed" from="MarginContainer/CenterContainer/CenterContainer/Sprite/Ok" to="." method="_on_Ok_pressed"]
